--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,15 @@
 name = "cosmetics_parser"
 version = "0.1.0"
 edition = "2021"
-
+license = "MIT"
+authors = ["Julia Skip"]
 description = "A Rust-based parser to extract product details from cosmetics catalogs in markdown format and output them in structured formats like JSON or Rust structs."
+readme = "README.md"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 anyhow = "1.0.91"
 pest = "2.7.14"
 pest_derive = "2.7.14"
+thiserror = "1.0"
